[package]
name = "ipv6-only"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan@hyperpolymath.org>"]
description = "IPv6 address manipulation, subnet calculation, and network planning tools"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/ipv6-only"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rand = "0.8"
hex = "0.4"

[dependencies]
ipv6-only-core = { path = "crates/core" }
ipv6-only-utils = { path = "crates/utils" }
ipv6-only-subnet = { path = "crates/subnet" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "ipv6"
path = "src/main.rs"
